<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MarkChart</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Back to title</string>
    <string name="add_string">Add</string>
    <string name="view_string">View</string>
    <string name="chart_string">Chart</string>
    <string name="about_string">About</string>
    <string name="title_activity_add">Add an entry</string>
    <string name="firstname_string">First name</string>
    <string name="lastname_string">Last name</string>
    <string name="marks_string">Marks</string>
    <string name="rollnum_string">Roll #</string>
    <string name="dob_string">Date of birth</string>
    <string name="title_activity_chart">Chart</string>
    <string name="pie_chart_string">Pie chart</string>
    <string name="column_chart_string">Column chart</string>
    <string name="title_activity_view">View/Edit</string>
    <string name="title_activity_change">Change</string>
    <string name="search_string">Search</string>
    <string name="export_string">Export</string>
    <string name="pick_string">Pick</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
